<resources>
    <string name="app_name">Jojo Bear Fitness</string>
    <string name="food_name_hint">food name</string>
    <string name="calories_hint">calories</string>
    <string name="save_button_text">save button</string>
    <string name="log">Log</string>
    <string name="dashboard">Dashboard</string>
    <string name="enter_food_name">Enter Food Name</string>
    <string name="enter_calories">Enter Calories</string>
    <string name="record_this_food">RECORD THIS FOOD</string>
    <string name="add_new_food">Add New Food</string>
    <string name="clear_data">Clear Data</string>
    <string name="new_entry">new entry</string>
</resources>