<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_log">

    <fragment
        android:id="@+id/navigation_log"
        android:name="com.jojobearfitness.LogFragment"
        android:label="@string/log"
        tools:layout="@layout/fragment_log">
        <action
            android:id="@+id/action_logFragment_to_newEntryFragment"
            app:destination="@id/navigation_new_entry" />
    </fragment>

    <fragment
        android:id="@+id/navigation_new_entry"
        android:name="com.jojobearfitness.NewEntryFragment"
        android:label="@string/new_entry"
        tools:layout="@layout/fragment_new_entry" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.jojobearfitness.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />
</navigation>
